updating styles, fonts and colours to guidelines as well as layout issues with search bar and animated title

--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,11 @@
   }
 }
 
+.align-serch-center {
+  text-align: center !important
+  }
+
+
 .uil-d-block {
   display: block;
 }
